--- a/source/_posts/202307-第一篇博客.md
+++ b/source/_posts/202307-第一篇博客.md
@@ -6,8 +6,4 @@ title: 第一篇博客
 description: 初步搭好了博客，但文章进度无了
 ---
 
-耗时两天，终于，终于，终于把博客初步搭好了！一些必要的插件，比如公式书写，字数统计都装好了！之后再慢慢完善吧！不过，搭建好博客的代价就是，整整两天，文章进度几乎为 0 。。。= =
-
-比原计划（13 号前搞定）已经迟了好久了，明天安心干活，希望至少在 18 号前完成。
-
-另：我是属于研二结束才堪堪达到了大佬们本科大三的进度，真是失败啊。
+耗时两天，终于把博客初步搭好了。一些必要的插件，比如公式书写，字数统计等也都装好了，之后再慢慢完善吧。不过搭好博客的代价就是，整整两天，文章进度几乎为零 = =! 比原计划（13 号前搞定）已经迟了好久了，明天安心写，希望至少在 18 号前完成，之后再来捣鼓这玩意。
