--- a/source/_posts/202312-plotly.md
+++ b/source/_posts/202312-plotly.md
@@ -5,33 +5,31 @@ categories: python 笔记
 tags:
 ---
 
-# plotly 学习笔记
-
-## 面向对象编程（拾缺）
+# 面向对象编程（拾缺）
 
 > 这一部分是关于《Python 从入门到精通》书中第 10 章的笔记。当时看的一知半解，一直都是调包狂魔，没这方面需求。这次大致都搞明白了。
 
 <!-- more -->
 
-### 面向对象概述
+## 面向对象概述
 
-#### 对象
+### 对象
 
 - 静态部分：“属性”；动态部分：“行为”。
 
-#### 类
+### 类
 
 - 类是封装对象的属性和行为的**载体**，对象是类的**实例**。类定义了该类中所有对象所共有的属性和行为。
 
-#### 面向对象程序设计的特点
+### 面向对象程序设计的特点
 
 1. 封装：比如类就只提供了对象的属性和行为的接口，避免了外部对内部数据的影响。
 2. 继承：在类下再定义类，子类继承了父类封装的属性和行为，又有了自己定义的属性和行为。子类的实例都是父类的实例，但不能反过来说。
 3. 多态：子类是在满足父类的属性和行为之上又定义了**新**的属性和行为，相当于给父类的实例加了新的限制。父类无法区分这些限制，只能通过加子类来区分。通过这种**区分**行为，就有了多种形态。实际上还是在父类实例集合中。
 
-### 类的定义和使用
+## 类的定义和使用
 
-#### 定义类
+### 定义类
 
 - `class` 关键字。
   ```py
@@ -58,7 +56,7 @@ tags:
   - 类属性在类中、方法外定义，所有类的实例共用。方法可以改变类属性。书中一个例子是，每次初始化对类属性 `number` 加 1，用以计算新建实例的数量。类属性可通过类名称或实例名访问，并可通过调用的方式动态添加新的类属性。
   - 实例属性可通过 `self` 关键字定义/修改。在类外代码中，只能通过每个特定实例修改各自的实例属性，且互不影响。
 
-### 属性
+## 属性
 
 - 在方法上加 `@property`，将该方法转为属性，调用时按属性的调用形式调用，不用小括号。调用时自动执行该方法的函数，并返回执行后的结果（方法定义里要有 `return`）。
 
@@ -66,11 +64,11 @@ tags:
 
 - 剩下的懒得记了，感觉看到这，看书应该理解上没啥问题了。
 
-## Creating and Updating Figures in Python
+# Creating and Updating Figures in Python
 
 - plotly 的 python 包主要通过数据结构（**figures**）来实现创建、操作和渲染等细节。figures 是 `plotly.graph_objects.Figure` 类的字典或实例。
 
-### Figures As Dictionaries
+## Figures As Dictionaries
 
 - 较低层级上，figures 可以通过字典表示，并通过 `plotly.io.show()` 函数显示。
 
@@ -88,7 +86,7 @@ tags:
   pio.show(fig)
   ```
 
-### Figures as Graph Objects
+## Figures as Graph Objects
 
 - `plotly.graph_objects` 模块提供一个自动生成的派生类（子类） `graph_objects`，可以在高层级上通过 `plotly.graph_objects.Figure` 类表示 figures。
   {% note %}
@@ -144,7 +142,7 @@ tags:
   print("\n\n")
   ```
 
-#### When to use Graph Objects
+### When to use Graph Objects
 
 - 两者（字典和 graph objects）的优缺点对比可见：https://plotly.com/python/graph-objects/。
 - `plotly.graph_objects` 模块有一组派生类，代表着 figure schema 中非叶节点（non-leaf node）。graph objects 指这些派生类的实例。这些实例有很方便的方法来改变其属性（应该是实例属性吧？）。
@@ -155,17 +153,17 @@ tags:
   - 例子：trace 的一个类型是 `scatter`，可由类 `plotly.graph_objects.Scatter` 中的一个实例表示。这意味着由 `go.Figure(data=[go.Scatter(x=[1,2], y=[3,4)])` 的 JSON 表示将会是 `{"data": [{"type": "scatter", "x": [1,2], "y": [3,4]}]}`，而这句话里的 `go.Scatter(x=[1,2], y=[3,4)])` 是新建了一个 `plotly.graph_objects.Scatter` 中的实例。该实例便属于非叶节点，即不在 figure 树的属性中的节点。
 - Plotly Express 里的函数能够在 graph objects 的基础上建立 figures，即返回 `plotly.graph_objects.Figure` 类的实例。
   {% note %}
-  #### 小结
+  ### 小结
   至此我们有了两种表示 figure 的方法。一种是字典，一种是 graph object。对后者而言，可以自底向上从单个 graph object 开始，通过 `go.Figure()` 建立 figure，也可用 Plotly Express 一次性创建。
   {% endnote %}
 
-### Creating Figures or Subplots
+## Creating Figures or Subplots
 
 {% note %}
 此页面总结了几种创建新的 graph object 的方法。推荐用 Plotly Express 创建。
 {% endnote %}
 
-#### Plotly Express
+### Plotly Express
 
 - Plotly Express 是高层级数据可视化 API，能够通过一次函数调用创建几乎全部（fully-populated）的 graph object。
 
@@ -181,11 +179,11 @@ tags:
   fig.show()
   ```
 
-#### Graph Objects Figure Constructor
+### Graph Objects Figure Constructor
 
 - 前面已经说了，通过 `go.Figure()`，可从字典或 graph object&layout 来创建 figure。
 
-#### Figure Factories
+### Figure Factories
 
 - Figure factories 提供了函数来创建 figures，通常是为了满足特定需求。
 
@@ -202,7 +200,7 @@ tags:
   fig.show()
   ```
 
-#### Make Subplots
+### Make Subplots
 
 - `plotly.subplots.make_subplots()` 函数通过格点来排布子图，各子图的 trace 通过 `add_trace()` 函数添加。
 
@@ -219,11 +217,11 @@ tags:
 
 - 下面加 trace 里还有用 Plotly Express 建子图的，但我没看懂怎么建立的。
 
-### Updating Figures
+## Updating Figures
 
 - 不管一个 figure 怎么建立起来的，总可通过加额外的 traces 或者修改其属性来进行更新。
 
-#### Adding Traces
+### Adding Traces
 
 - `add_trace()` 方法可添加新的 traces，这样可一步步加 `go.Bar` 和 `go.Scatter`等等。`append_trace()` 可做同样的事，但是不返回 figure。
 
@@ -239,7 +237,7 @@ tags:
 
   - 此方法只要是 figre 对象即可，不管它是通过何种方式建立起来的。
 
-#### Adding Traces To Subplots
+### Adding Traces To Subplots
 
 - 若一个 figure 的子图是用 `plotly.subplots.make_subplots()` 生成，则可通过指定 `add_trace()` 中的 `row` 和 `col` 参数来在特定子图添加新的 trace。
 
@@ -279,7 +277,7 @@ tags:
 
   但这子图我属实没看懂怎么建立的。
 
-#### Add Trace Convenience Methods
+### Add Trace Convenience Methods
 
 - 在 `add_trace()` 方法中，都要先建立各类型的 trace，再作为参数传给它。也可用 `add_{type}`方法，其中 `{type}` 换成对应 trace 的类型，可将两步合为一步。
 
@@ -294,7 +292,7 @@ tags:
   fig.show()
   ```
 
-#### Magic Underscore Notation
+### Magic Underscore Notation
 
 - 为了能更好操控嵌套属性（nested properties），graph object constructors 和很多 graph object 方法都支持魔术下划线表示（magic underscore notation）。
 
@@ -328,7 +326,7 @@ tags:
 
 - 一般而言，关键字参数里出现下划线**几乎总是**用了下划线表示，但也有一些个例不是，比如：`error_x`, `error_y`, `error_z`, `copy_xstyle`, `copy_ystyle`, `copy_zstyle`, `paper_bgcolor`, and `plot_bgcolor`。这些都是在早期没有定义下划线表示时加入库中的。
 
-#### Updating Traces
+### Updating Traces
 
 - `update_traces()` 方法，提供 `selector` 参数来选择哪些 traces 被更改。selector 参数接收字典，字典里的 key 就是 traces 里的关键字，value 就是想要筛选的值。除此之外，也有 `col` 和 `row` 参数来直接指定子图的行列。此方法对 Plotly Express 和 figure factories 建立的 figure 也有效。
 
@@ -365,7 +363,7 @@ tags:
   fig.show()
   ```
 
-#### Conditionally Updating Traces
+### Conditionally Updating Traces
 
 - 根据各个 trace 的某些属性的当前值作为条件（即条件不是人为给定的）来更新其它 traces，可使用 `for_each_trace()` 方法。其第一个参数需要是一个函数（比如一个匿名函数），来作为条件去更新那些 traces。此方法也有 `selector` 参数来圈定要更改的 traces 的范围。
 
@@ -385,7 +383,7 @@ tags:
   fig.show()
   ```
 
-#### Updating Figure Layouts
+### Updating Figure Layouts
 
 - `update_layout()` 方法。
 
@@ -419,7 +417,7 @@ tags:
                                           font=go.layout.title.Font(size=30)))
   ```
 
-#### Overwrite Existing Properties When Using Update Methods
+### Overwrite Existing Properties When Using Update Methods
 
 - `update_layout()` 和 `update_traces()` 有一个 `overwrite` 关键字参数，默认是 `False`，这样更新值会被精准地递归到嵌套的那一个 key。而若是 `True`，则不会递归，而是整个地覆盖掉原来整条嵌套属性链的值。
 
@@ -434,20 +432,20 @@ tags:
   fig.show()
   ```
 
-#### Updating Figure Axes
+### Updating Figure Axes
 
 - `update_xaxes()`，` update_yaxes()`
   - 例子：`fig.update_xaxes(showgrid=False)`
 - 也有 `for_each_xaxis()` 和 `for_each_yaxis()`，和上面的 `for_each_trace()` 方法类似。
 - 对于非笛卡尔子图，有额外的 `update_{type}` 和 `for_each_{type}` 方法。比如对极坐标，有 `update_polar()` 和 `for_each_polar()`
 
-#### Other Update Methods
+### Other Update Methods
 
 - `update_layout_images()`：https://plotly.com/python/images/
 - `update_annotations()`：https://plotly.com/python/text-and-annotations/#multiple-annotations
 - `update_shapes()`：https://plotly.com/python/shapes/
 
-#### Chaining Figure Operations
+### Chaining Figure Operations
 
 - 除了明显指出的地方，上面所有方法都会返回一个修改后的 figure 的引用，利用这个机制可以在一个表达式里面链式修改 figure。
   ```py
@@ -463,7 +461,7 @@ tags:
   ```
   - 这个真的绝了。每次修改返回了 figure 本身，再用点操作进行下次修改，最后整体作为 figure 直接 `show()`。妙极。
 
-#### Property Assignment
+### Property Assignment
 
 - trace 和 layout 属性可以用属性赋值句法（property assignment syntax）更新。
 
