--- a/source/_posts/202310-CS106B-Intro.md
+++ b/source/_posts/202310-CS106B-Intro.md
@@ -2,7 +2,7 @@
 title: CS106B，启动！
 description: 开始入坑C++。将开帖记录学C++的一些心得体会和知识点。
 categories: CS106B
-tags:
+tags: [c++, 笔记]
 ---
 
 课程视频：[b 站-CS106B-2020 夏](https://www.bilibili.com/video/BV1Hr4y137Do/?vd_source=4efd33acadc20776930caf2353235a75)，[b 站-CS106B-2018 冬](https://www.bilibili.com/video/BV1G7411k7jG/?vd_source=4efd33acadc20776930caf2353235a75)。
