--- a/source/_posts/202310-中期考核笔记.md
+++ b/source/_posts/202310-中期考核笔记.md
@@ -2,7 +2,7 @@
 title: 复习中期考核时整理的笔记
 description:
 categories: 物理笔记
-tags:
+tags: [物理, 笔记]
 ---
 
 [等离子体物理导论-ffchen](https://kdocs.cn/l/ci9RuvZtDv11)
