--- a/source/_posts/202310-CS106B-Intro.md
+++ b/source/_posts/202310-CS106B-Intro.md
@@ -1,7 +1,7 @@
 ---
 title: CS106B，启动！
 description: 开始入坑C++。将开帖记录学C++的一些心得体会和知识点。
-categories: CS106B
+categories: [计算机, C++, CS106B]
 tags: [c++, 笔记]
 ---
 
