--- a/source/_posts/202310-中期考核笔记.md
+++ b/source/_posts/202310-中期考核笔记.md
@@ -1,8 +1,8 @@
 ---
 title: 复习中期考核时整理的笔记
 description:
-categories: 物理笔记
-tags: [物理, 笔记]
+categories: [物理]
+tags: [物理]
 ---
 
 [等离子体物理导论-ffchen](https://kdocs.cn/l/ci9RuvZtDv11)
